--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-timestamp": "4.3.1",
     "react_ujs": "^2.6.1"
   },
   "devDependencies": {
